--- a/com/header.component.html
+++ b/com/header.component.html
@@ -35,8 +35,8 @@
 <div class="nav-wrap">
     <div class="container">
         <ul class="nav nav-inline">
-            <li class="active"><a href="#">网站首页</a></li>
-            <li><a href="#">公司介绍</a></li>
+            <li class="active"><a href="index.html">网站首页</a></li>
+            <li><a href="about.html">公司介绍</a></li>
             <li><a href="#">产品中心</a></li>
             <li><a href="#">新闻中心</a></li>
             <li><a href="#">高级定制</a></li>
