--- a/css/main.css
+++ b/css/main.css
@@ -91,5 +91,273 @@
 }
 
 /**
+ * 侧边栏
+ */
+.sidebar {
+    float: left;
+    width: 210px;
+    margin-right: 42px;
+}
+
+.sidebar > div {
+    margin-bottom: 20px;
+}
+
+/**
+ * 侧边栏——分类
+ */
+.sidebar-class > .title {
+    line-height: 59px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    background: url("../img/h_bg.png");
+    margin-bottom: 10px;
+}
+
+/**
  * 分类菜单
  */
+.class-menu .title {
+    line-height: 45px;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    background: #cc3333;
+}
+
+.class-menu li a {
+    line-height: 42px;
+    font-size: 18px;
+    color: #333;
+    background-color: #eee;
+}
+
+.class-menu li a:hover {
+    background-color: white;
+}
+
+.class-menu li img {
+    margin-left: 32px;
+    padding-right: 5px;
+    vertical-align: -5px;
+}
+
+.class-menu li {
+    border-bottom: 1px solid #ccc;
+}
+
+.class-menu li:last-child {
+    border-bottom: none;
+}
+
+/**
+ * 分类菜单2
+ */
+.class-menu2 li a {
+    text-align: center;
+    background: url("../img/angle.png") no-repeat 35px center #eee;
+}
+
+/**
+ * 侧边栏——产品推荐
+ */
+.sidebar-prod > .title {
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    line-height: 45px;
+    background-color: #333;
+}
+
+.sidebar-prod > .content {
+    padding: 20px 10px;
+    background-color: #eee;
+}
+
+/**
+ * 侧边栏——联系信息
+ */
+.sidebar-info > .title {
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    line-height: 45px;
+    background-color: #990000;
+}
+
+.sidebar-info > .content {
+    padding: 20px 10px;
+    background-color: #eee;
+    line-height: 26px;
+}
+
+/**
+ * 板块标题栏
+ */
+.head-bar {
+    border-bottom: 1px solid #999;
+    line-height: 57px;
+}
+
+.head-bar .title {
+    float: left;
+    font-size: 0;
+}
+
+.head-bar .title {
+    font-size: 24px;
+    color: #990000;
+    vertical-align: top;
+}
+
+.head-bar .subtitle {
+    font-size: 18px;
+    color: #999;
+    margin-left: 20px;
+    vertical-align: top;
+}
+
+.head-bar .more {
+    float: right;
+    color: #999;
+    font-size: 18px;
+    vertical-align: top;
+}
+
+/**
+ * 产品列表——简洁版
+ */
+.simple-prod-list .item {
+    float: left;
+    width: 32%;
+    margin-top: 10px;
+}
+
+.simple-prod-list .item:nth-of-type(3n-1) {
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+/**
+ * 主体内容
+ */
+#main > .container > .content {
+    float: right;
+    width: 750px;
+}
+
+/**
+ * 客户列表
+ */
+.custom-list .item {
+    float: left;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    width: 32%;
+}
+
+.custom-list .item:nth-of-type(3n-1) {
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.custom-list .item > img {
+    width: 192px;
+    height: auto;
+}
+
+.custom-list .info {
+    float: right;
+    width: 120px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.custom-list .info .title {
+    font-size: 16px;
+    margin-bottom: 16px;
+}
+
+.custom-list .info .more {
+    margin-top: 16px;
+}
+
+.custom-list .info .more > a {
+    font-size: 16px;
+    color: #cc0000;
+}
+
+/**
+ * 首页关于我们板块
+ */
+#about-board .content {
+    padding: 20px 0;
+}
+
+#about-board .content h3 {
+    font-size: 16px;
+    color: #333;
+}
+
+#about-board .content p {
+    text-indent: 2em;
+    font-size: 14px;
+    color: #333;
+}
+
+#about-board .content p .more {
+    color: #ff0033;
+}
+
+/**
+ * 面包屑导航
+ */
+.crumbs-con {
+    line-height: 34px;
+    padding-left: 20px;
+    font-size: 14px;
+}
+
+.crumbs-con a {
+    color: #333;
+}
+
+.crumbs-con a:hover {
+    text-decoration: underline;
+}
+
+/**
+ * 文章类
+ */
+.article-con .title {
+    margin-top: 35px;
+    margin-bottom: 4px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #333;
+}
+
+.article-con .title .wrap {
+    float: left;
+    line-height: 45px;
+    padding-right: 17px;
+    background: url("../img/ag_bg.png") no-repeat right center;
+    font-size: 0;
+
+}
+
+.article-con .title .wrap > span {
+    display: inline-block;
+    height: 100%;
+    padding: 0 20px;
+    font-size: 24px;
+    color: white;
+    background: url("../img/nav_bg.png");
+    vertical-align: top;
+}
+
+.article-con .content {
+    padding: 45px;
+    border-top: 1px solid #333;
+}
+
