基本都完成

--- a/com/footer.component.html
+++ b/com/footer.component.html
@@ -2,13 +2,14 @@
 <div class="nav-wrap">
     <div class="container">
         <ul class="nav nav-inline">
-            <li class="active"><a href="#">网站首页</a></li>
-            <li><a href="#">公司介绍</a></li>
-            <li><a href="#">产品中心</a></li>
-            <li><a href="#">新闻中心</a></li>
-            <li><a href="#">高级定制</a></li>
-            <li><a href="#">常见问题</a></li>
-            <li><a href="#">联系我们</a></li>
+            <li class="active"><a href="index.html">网站首页</a></li>
+            <li><a href="about.html">公司介绍</a></li>
+            <li><a href="prod.html">产品中心</a></li>
+            <li><a href="news.html">新闻中心</a></li>
+            <li><a href="case.html">客户案例</a></li>
+            <li><a href="design.html">高级定制</a></li>
+            <li><a href="qna.html">常见问题</a></li>
+            <li><a href="contact.html">联系我们</a></li>
         </ul>
     </div>
 </div>
