--- a/com/header.component.html
+++ b/com/header.component.html
@@ -37,11 +37,38 @@
         <ul class="nav nav-inline">
             <li class="active"><a href="index.html">网站首页</a></li>
             <li><a href="about.html">公司介绍</a></li>
-            <li><a href="#">产品中心</a></li>
-            <li><a href="#">新闻中心</a></li>
-            <li><a href="#">高级定制</a></li>
-            <li><a href="#">常见问题</a></li>
-            <li><a href="#">联系我们</a></li>
+            <li>
+                <a href="prod.html">产品中心</a>
+                <ul class="drop-menu">
+                    <li><a href="prod.html">商务装系列</a></li>
+                    <li><a href="prod.html">职业装系列</a></li>
+                    <li><a href="prod.html">工程装系列</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="news.html">新闻中心</a>
+                <ul class="drop-menu">
+                    <li><a href="news.html">公司动态</a></li>
+                    <li><a href="news.html">行业动态</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="case.html">客户案例</a>
+                <ul class="drop-menu">
+                    <li><a href="case.html">个人案例</a></li>
+                    <li><a href="case.html">企业案例</a></li>
+                    <li><a href="case.html">学校案例</a></li>
+                </ul>
+            </li>
+            <li><a href="design.html">高级定制</a></li>
+            <li>
+                <a href="qna.html">常见问题</a>
+                <ul class="drop-menu">
+                    <li><a href="qna.html">定制问题</a></li>
+                    <li><a href="qna.html">行业问题</a></li>
+                </ul>
+            </li>
+            <li><a href="contact.html">联系我们</a></li>
         </ul>
     </div>
 </div>
