--- a/com/sidebar-prod-list.component.html
+++ b/com/sidebar-prod-list.component.html
@@ -1,5 +1,5 @@
 <ul class="sidebar-prod-list nav">
     {{# for(var i = 0, len = d.length; i < len; i++){ var t = d[i]; }}
-    <li><a href="prod-detail.html?id={{t.id}}"><img src="{{t.img}}"></a></li>
+    <li><a href="prod-detail.html?id={{t.id}}"><img src="{{t.img}}" class="img-fluid"></a></li>
     {{# } }}
 </ul>
