--- a/com/sidebar-prod.component.html
+++ b/com/sidebar-prod.component.html
@@ -1,4 +1,4 @@
 <div class="sidebar-group sidebar-prod">
-    <div class="title">产品分类展示</div>
+    <div class="title">推荐产品</div>
     <div class="content"></div>
 </div>
