--- a/com/simple-prod-list.component.html
+++ b/com/simple-prod-list.component.html
@@ -1,5 +1,5 @@
-<div class="simple-prod-list clearfix">
+<div class="prod-list simple-prod-list clearfix">
     {{# for(var i = 0, len = d.length; i < len; i++){ var t = d[i]; }}
-    <div class="item"><a href="prod-detail.html?id={{t.id}}"><img class="img-responsive" src="{{t.img}}"></a></div>
+    <div class="item"><a href="prod-detail.html?id={{t.id}}"><img class="img-fluid" src="{{t.img}}"></a></div>
     {{# } }}
 </div>
