--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .container {
-    width: 1002px;
+    width: 1190px;
     margin: 0 auto;
     padding: 0;
 }
@@ -37,11 +37,12 @@
     font-size: 0;
 }
 
-#header .nav li {
-    width: 14.2857142%;
+#header .nav > li {
+    position: relative;
+    width: 12.5%;
 }
 
-#header .nav a {
+#header .nav > li > a {
     padding: 0;
     line-height: 46px;
     color: white;
@@ -50,7 +51,45 @@
     font-weight: normal;
 }
 
-#header .nav li.active, #header .nav li:hover {
+#header .nav > li.active, #header .nav > li:hover {
+    background: url("../img/nav_bg_active.png") repeat;
+}
+
+#header .nav > li .drop-menu {
+    display: none;
+}
+
+#header .nav > li:hover .drop-menu {
+    display: block;
+}
+
+.drop-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    min-width: 100%;
+    margin: 0;
+    padding-top: 4px !important;
+    border-radius: 0;
+    background-color: transparent;
+}
+
+.drop-menu li {
+    display: block;
+    background-color: #ccc;
+}
+
+.drop-menu a {
+    color: black;
+    font-size: 14px;
+    text-align: center;
+    line-height: 32px;
+}
+
+.drop-menu li:hover a, .drop-menu li.active a {
+    color: white;
     background: url("../img/nav_bg_active.png") repeat;
 }
 
@@ -63,7 +102,7 @@
 }
 
 #footer .nav li {
-    width: 14.2857142%;
+    width: 12.5%;
 }
 
 #footer .nav a {
@@ -95,8 +134,13 @@
  */
 .sidebar {
     float: left;
-    width: 210px;
-    margin-right: 42px;
+    width: 190px;
+    margin-right: 10px;
+}
+
+.sidebar.float-right {
+    margin-right: 0;
+    margin-left: 10px;
 }
 
 .sidebar > div {
@@ -157,6 +201,10 @@
 .class-menu2 li a {
     text-align: center;
     background: url("../img/angle.png") no-repeat 35px center #eee;
+}
+
+.class-menu2 li.active a {
+    color: #cc3333;
 }
 
 /**
@@ -226,15 +274,15 @@
 }
 
 /**
- * 产品列表——简洁版
+ * 产品列表
  */
-.simple-prod-list .item {
+.prod-list .item {
     float: left;
     width: 32%;
     margin-top: 10px;
 }
 
-.simple-prod-list .item:nth-of-type(3n-1) {
+.prod-list .item:nth-of-type(3n-1) {
     margin-left: 2%;
     margin-right: 2%;
 }
@@ -242,9 +290,13 @@
 /**
  * 主体内容
  */
+#main > .container {
+    position: relative;
+}
+
 #main > .container > .content {
     float: right;
-    width: 750px;
+    width: 990px;
 }
 
 /**
@@ -361,3 +413,117 @@
     border-top: 1px solid #333;
 }
 
+/**
+ * 分页导航
+ */
+.pagination {
+    display: block;
+    font-size: 0;
+    text-align: center;
+}
+
+.pagination > span, .pagination > a {
+    display: inline;
+    padding: 5px 10px;
+    font-size: 14px;
+    color: #666;
+    border: 1px solid #ccc;
+}
+
+.pagination > span:hover, .pagination > a:hover {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+
+.pagination > .current {
+    margin: 0 5px;
+    border-color: transparent;
+    color: #333;
+}
+
+.pagination > .current.prev, .pagination > .current.next {
+    border-color: #ccc;
+    color: #666;
+    margin: 0;
+}
+
+.pagination > a {
+    margin: 0 5px;
+}
+
+/**
+ * 产品详情
+ */
+#prod-detail .head {
+    padding-left: 20px;
+    background: url("../img/h_bg_red.png") no-repeat left center;
+}
+
+/**
+ * 客服浮窗
+ */
+.kf-board {
+    position: fixed;
+    top: 220px;
+    right: 0;
+    width: 170px;
+}
+
+.kf-board .title {
+    font-size: 18px;
+    color: white;
+    line-height: 45px;
+    padding: 0 30px;
+    background-color: #333;
+}
+
+.kf-board ul {
+    padding: 0 5px;
+    background-color: white;
+}
+
+.kf-board li {
+    text-align: center;
+    font-size: 16px;
+    color: #333;
+    line-height: 56px;
+    border-bottom: 1px solid #ccc;
+}
+
+.kf-board li:last-child {
+    border-bottom: none;
+}
+
+.kf-board li img {
+    vertical-align: top;
+}
+
+.kf-board .vcode {
+    background-color: #eee;
+    text-align: center;
+    padding: 12px;
+}
+
+.kf-board .vcode h5 {
+    font-size: 14px;
+    margin-bottom: 12px;
+    color: #cc6600;
+}
+
+.kf-board .vcode img {
+    width: 96px;
+}
+
+.kf-board .label {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    top: 0;
+    left: -45px;
+    background: url("../img/label_left.png") no-repeat center/contain;
+}
+
+.kf-board .label.active {
+    background-image: url("../img/label_right.png");
+}
