--- a/com/custom-list.component.html
+++ b/com/custom-list.component.html
@@ -1,4 +1,4 @@
-<div class="custom-list">
+<div class="custom-list clearfix">
     {{# for(var i = 0, len = d.length; i < len; i++){ var t = d[i]; }}
     <div class="item">
         <img class="brand" src="{{t.img}}">
